# sit-event-api/src/event-forms/dto/update-event-form.dto.ts
@@ -1,0 +1,8 @@
+import { PartialType, OmitType } from '@nestjs/swagger';
+import { CreateEventFormDto, CreateFormFieldDto } from './create-event-form.dto';
+
+export class UpdateEventFormDto extends PartialType(
+  OmitType(CreateEventFormDto, ['fields'] as const),
+) {}
+
+export class UpdateFormFieldDto extends PartialType(CreateFormFieldDto) {}
